[POCAM-57] fix searchbox on ie11

--- a/html/themes/custom/common_design_subtheme/sass/pocam_custom/_main-content.scss
+++ b/html/themes/custom/common_design_subtheme/sass/pocam_custom/_main-content.scss
@@ -44,13 +44,13 @@
   }
 
   input[type='text'] {
-    padding: 22px 10px;
+    padding: 0 10px;
     border: 1px solid $cd-ocha-blue;
     color: $cd-ocha-blue;
     transition: .3s ease;
     cursor: pointer;
     height: 42px;
-    width: 100%;
+    width: 98%;
 
     &::placeholder {
       color: $cd-dark-grey;
